--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <p>Hello there! I'm Bhagya Krishnan.U.B, a passionate and ambitious student pursuing a career as a python Fullstack Web Developer. As a dedicated leaner in the dynamic world of web development, i am currently upgrading my skills in both frontend and backend technologies to create robust and user-friendly web applications.
             My current focus developing web applications with technologies like HTML, CSS, JavaScript, Bootstrap, Jquery,Mysql and diving deepinto the intricacies of backend development using Python.
           </p><br>
-          <a href="" download="Resume.pdf"><button class="btn1"> Download CV & Resume</button></a>
+          <a href="RESUME.pdf.pdf"alt="resume" download="resume"><button class="btn1"> Download CV & Resume</button></a>
         </div>
         <div class="col-lg-6">
           <img src="pexels-andrea-piacquadio-920382.jpg" alt="" height="300px" width="300px" id="img">
