--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="shortcut icon" href="PORTFOLIO.png" type="Iimage/x-icon">
+  <link rel="shortcut icon" href="Untitled design (4).png" type="Iimage/x-icon">
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
 
@@ -95,7 +95,7 @@
           <p>Hello there! I'm Bhagya Krishnan.U.B, a passionate and ambitious student pursuing a career as a python Fullstack Web Developer. As a dedicated leaner in the dynamic world of web development, i am currently upgrading my skills in both frontend and backend technologies to create robust and user-friendly web applications.
             My current focus developing web applications with technologies like HTML, CSS, JavaScript, Bootstrap, Jquery,Mysql and diving deepinto the intricacies of backend development using Python.
           </p><br>
-          <a href="bhagya krishnan U.B.pdf"alt="resume" download="resume"><button class="btn1"> Download CV & Resume</button></a>
+          <a href="RESUME.pdf"alt="resume" download="resume"><button class="btn1"> Download CV & Resume</button></a>
         </div>
         <div class="col-lg-6">
           <img src="pexels-andrea-piacquadio-920382.jpg" alt="" height="300px" width="300px" id="img">
@@ -261,6 +261,18 @@
               <h5>Not Responsive <img src="laptop.svg" alt=""></h5>
               <p class="card-text">( HTML, CSS, JS )</p>
               <a href="https://bhagyaajeesh.github.io/javascript-project/" class="btn">to visit</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mt-5">
+          <div class="card text-center bg-info h-100" >
+            <img src="Untitled design (1).png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Project-4</h5>
+              <h4>Food blog-webapp</h4>
+              <h5>Responsive website <img src="phone-flip.svg" alt=""></h5>
+              <p class="card-text">( BootStrap, HTML, CSS)</p>
+              <a href="https://foodiefood.pythonanywhere.com/" class="btn">to visit</a>
             </div>
           </div>
         </div>
